<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.angryscarf.setalarm.MainActivity">


    <TimePicker
        android:id="@+id/tp_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        ></TimePicker>






    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        //Repeat option
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="8dp"
            android:layout_alignParentLeft="true"
            >


            <CheckBox
                android:id="@+id/check_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="toggleRepeat"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/txt_repeat"/>

        </LinearLayout>


        //Vibrate option
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentRight="true"

            android:layout_marginHorizontal="8dp">

            <CheckBox
                android:id="@+id/check_vibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/txt_vibrate"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:visibility="gone">

        <Button
            android:id="@+id/btn_day_sunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:borderlessButtonStyle"
            android:textAllCaps="true"
            android:paddingHorizontal="0dp"
            android:onClick="toggleDay"
            android:textColor="@color/colorAccent"
            android:text="@string/txt_day_sunday"
            />

        <Button
            android:id="@+id/btn_day_monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:borderlessButtonStyle"
            android:textAllCaps="true"
            android:paddingHorizontal="0dp"
            android:onClick="toggleDay"
            android:textColor="@color/colorAccent"
            android:text="@string/txt_day_monday"
            />


        <Button
            android:id="@+id/btn_day_tuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:borderlessButtonStyle"
            android:textAllCaps="true"
            android:paddingHorizontal="0dp"
            android:onClick="toggleDay"
            android:textColor="@color/colorAccent"
            android:text="@string/txt_day_tuesday"
            />

        <Button
            android:id="@+id/btn_day_wednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:borderlessButtonStyle"
            android:textAllCaps="true"
            android:paddingHorizontal="0dp"
            android:onClick="toggleDay"
            android:textColor="@color/colorAccent"
            android:text="@string/txt_day_wednesday"
            />

        <Button
            android:id="@+id/btn_day_thursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:borderlessButtonStyle"
            android:textAllCaps="true"
            android:paddingHorizontal="0dp"
            android:onClick="toggleDay"
            android:textColor="@color/colorAccent"
            android:text="@string/txt_day_thursday"
            />

        <Button
            android:id="@+id/btn_day_friday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:borderlessButtonStyle"
            android:textAllCaps="true"
            android:paddingHorizontal="0dp"
            android:onClick="toggleDay"
            android:textColor="@color/colorAccent"
            android:text="@string/txt_day_friday"
            />

        <Button
            android:id="@+id/btn_day_saturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:borderlessButtonStyle"
            android:textAllCaps="true"
            android:paddingHorizontal="0dp"
            android:onClick="toggleDay"
            android:textColor="@color/colorAccent"
            android:text="@string/txt_day_saturday"
            />


    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="8dp"

        android:onClick="setAlarm"
        android:text="Set Alarm"
        />



</LinearLayout>
